--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <groupId>org.reaktivity</groupId>
   <artifactId>ry-bom</artifactId>
   <packaging>pom</packaging>
-  <version>develop-SNAPSHOT</version>
+  <version>0.1</version>
   <name>Reaktivity BOM for Java Projects</name>
   <url>https://github.com/reaktivity/ry-bom.java</url>
 
