--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
   <packaging>pom</packaging>
   <version>0.1</version>
   <name>Reaktivity BOM for Java Projects</name>
+  <description>Reaktivity BOM for Java Projects</description>
   <url>https://github.com/reaktivity/ry-bom.java</url>
 
   <licenses>
