--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,11 @@
       </dependency>
       <dependency>
         <groupId>org.reaktivity</groupId>
+        <artifactId>nukleus-flow</artifactId>
+        <version>0.1</version>
+      </dependency>
+      <dependency>
+        <groupId>org.reaktivity</groupId>
         <artifactId>nukleus-tcp</artifactId>
         <version>0.72</version>
       </dependency>
