--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
       <dependency>
         <groupId>org.reaktivity</groupId>
         <artifactId>reaktor</artifactId>
-        <version>0.91</version>
+        <version>0.92</version>
       </dependency>
       <dependency>
         <groupId>org.reaktivity</groupId>
@@ -73,7 +73,7 @@
       <dependency>
         <groupId>org.reaktivity</groupId>
         <artifactId>nukleus-tls</artifactId>
-        <version>0.98</version>
+        <version>0.99</version>
       </dependency>
       <dependency>
         <groupId>org.reaktivity</groupId>
@@ -97,8 +97,8 @@
       </dependency>
       <dependency>
         <groupId>org.reaktivity</groupId>
-        <artifactId>nukleus-auth-jwt</artifactId>
-        <version>0.30</version>
+        <artifactId>nukleus-oauth</artifactId>
+        <version>0.31</version>
       </dependency>
       <dependency>
         <groupId>org.reaktivity</groupId>
