--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
       <dependency>
         <groupId>org.reaktivity</groupId>
         <artifactId>reaktor</artifactId>
-        <version>0.134</version>
+        <version>0.135<version>
       </dependency>
       <dependency>
         <groupId>org.reaktivity</groupId>
