Add nukleus-amqp dependency

--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,11 @@
         <artifactId>nukleus-mqtt</artifactId>
         <version>0.25</version>
       </dependency>
+      <dependency>
+        <groupId>org.reaktivity</groupId>
+        <artifactId>nukleus-amqp</artifactId>
+        <version>0.4</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
