--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,11 @@
         <artifactId>nukleus-amqp</artifactId>
         <version>0.38</version>
       </dependency>
+      <dependency>
+        <groupId>org.reaktivity</groupId>
+        <artifactId>nukleus-proxy</artifactId>
+        <version>0.1</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
