--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
     <dependencies>
       <dependency>
         <groupId>org.reaktivity</groupId>
+        <artifactId>ry</artifactId>
+        <version>0.50</version>
+      </dependency>
+      <dependency>
+        <groupId>org.reaktivity</groupId>
         <artifactId>reaktor</artifactId>
         <version>0.154</version>
       </dependency>
