--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,7 +47,7 @@ jobs:
     - name: Deploy to Maven Central
       id: deploy
       continue-on-error: true
-      run: ./mvnw -B -Possrh com.github.genthaler:beanshell-maven-plugin:run build-helper:attach-artifact gpg:sign nexus-staging:deploy
+      run: ./mvnw -B -Possrh gpg:sign nexus-staging:deploy
       env:
         OSSRH_USERNAME: ${{ secrets.OSSRH_USERNAME }}
         OSSRH_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
