--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,7 @@
       <dependency>
         <groupId>org.reaktivity</groupId>
         <artifactId>nukleus-tls</artifactId>
-        <version>develop-SNAPSHOT</version>
+        <version>0.174</version>
       </dependency>
       <dependency>
         <groupId>org.reaktivity</groupId>
