--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,7 @@
       <dependency>
         <groupId>org.reaktivity</groupId>
         <artifactId>nukleus-fan</artifactId>
-        <version>develop-SNAPSHOT</version>
+        <version>0.24</version>
       </dependency>
       <dependency>
         <groupId>org.reaktivity</groupId>
