--- a/pom.xml
+++ b/pom.xml
@@ -100,7 +100,7 @@
       <dependency>
         <groupId>org.reaktivity</groupId>
         <artifactId>nukleus-ws</artifactId>
-        <version>develop-SNAPSHOT</version>
+        <version>0.82</version>
       </dependency>
       <dependency>
         <groupId>org.reaktivity</groupId>
