--- a/pom.xml
+++ b/pom.xml
@@ -110,7 +110,7 @@
       <dependency>
         <groupId>org.reaktivity</groupId>
         <artifactId>nukleus-sse</artifactId>
-        <version>develop-SNAPSHOT</version>
+        <version>0.89</version>
       </dependency>
       <dependency>
         <groupId>org.reaktivity</groupId>
