--- a/pom.xml
+++ b/pom.xml
@@ -105,7 +105,7 @@
       <dependency>
         <groupId>org.reaktivity</groupId>
         <artifactId>nukleus-kafka</artifactId>
-        <version>develop-SNAPSHOT</version>
+        <version>0.290</version>
       </dependency>
       <dependency>
         <groupId>org.reaktivity</groupId>
