--- a/pom.xml
+++ b/pom.xml
@@ -115,7 +115,7 @@
       <dependency>
         <groupId>org.reaktivity</groupId>
         <artifactId>nukleus-mqtt</artifactId>
-        <version>develop-SNAPSHOT</version>
+        <version>0.45</version>
       </dependency>
       <dependency>
         <groupId>org.reaktivity</groupId>
