Update dependency versions

--- a/pom.xml
+++ b/pom.xml
@@ -120,7 +120,7 @@
       <dependency>
         <groupId>org.reaktivity</groupId>
         <artifactId>nukleus-amqp</artifactId>
-        <version>develop-SNAPSHOT</version>
+        <version>0.44</version>
       </dependency>
       <dependency>
         <groupId>org.reaktivity</groupId>
