--- a/pom.xml
+++ b/pom.xml
@@ -125,7 +125,7 @@
       <dependency>
         <groupId>org.reaktivity</groupId>
         <artifactId>nukleus-proxy</artifactId>
-        <version>develop-SNAPSHOT</version>
+        <version>0.11</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
