--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,11 @@
       </dependency>
       <dependency>
         <groupId>org.reaktivity</groupId>
+        <artifactId>ry-start</artifactId>
+        <version>0.1</version>
+      </dependency>
+      <dependency>
+        <groupId>org.reaktivity</groupId>
         <artifactId>reaktor</artifactId>
         <version>0.166</version>
       </dependency>
