--- a/pom.xml
+++ b/pom.xml
@@ -64,8 +64,13 @@
       </dependency>
       <dependency>
         <groupId>org.reaktivity</groupId>
+        <artifactId>ry-tune</artifactId>
+        <version>0.1</version>
+      </dependency>
+      <dependency>
+        <groupId>org.reaktivity</groupId>
         <artifactId>reaktor</artifactId>
-        <version>0.166</version>
+        <version>0.167</version>
       </dependency>
       <dependency>
         <groupId>org.reaktivity</groupId>
