--- a/pom.xml
+++ b/pom.xml
@@ -60,11 +60,16 @@
       <dependency>
         <groupId>org.reaktivity</groupId>
         <artifactId>ry-start</artifactId>
-        <version>0.3</version>
+        <version>0.4</version>
       </dependency>
       <dependency>
         <groupId>org.reaktivity</groupId>
         <artifactId>ry-tune</artifactId>
+        <version>0.1</version>
+      </dependency>
+      <dependency>
+        <groupId>org.reaktivity</groupId>
+        <artifactId>ry-stop</artifactId>
         <version>0.1</version>
       </dependency>
       <dependency>
